test/e2e/bindata/assets/07_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-run-once-duration-override-operator
  name: run-once-duration-override-operator
  labels:
    runoncedurationoverride.operator: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      runoncedurationoverride.operator: "true"
  template:
    metadata:
      name: runoncedurationoverride
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        runoncedurationoverride.operator: "true"
    spec:
      serviceAccountName: run-once-duration-override-operator
      volumes:
      - name: tmp
        emptyDir: {}
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: run-once-duration-override-operator
          terminationMessagePolicy: FallbackToLogsOnError
          image: RUNONCEDURATIONOVERRIDE_OPERATOR_IMAGE
          imagePullPolicy: Always
          command:
            - /usr/bin/run-once-duration-override-operator
          args:
            - "start"
            - "--namespace=$(OPERAND_NAMESPACE)"
            - "--v=5"
          env:
            - name: OPERATOR_POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: OPERAND_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: RELATED_IMAGE_OPERAND_IMAGE
              value: RUNONCEDURATIONOVERRIDE_OPERAND_IMAGE
            - name: OPERAND_VERSION
              value: 1.1.1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          volumeMounts:
          - name: tmp
            mountPath: "/tmp"
