test/e2e/bindata/assets/networkpolicy-default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-run-once-duration-override-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
